--- a/user-dev.yml
+++ b/user-dev.yml
@@ -2,8 +2,9 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+    password: root
+    url: jdbc:mysql://192.168.32.252:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   redis:
-    host: 127.0.0.1
+    host: 192.168.32.252
     port: 6379
+    password: 1234
