--- a/product-dev.yml
+++ b/product-dev.yml
@@ -2,16 +2,17 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+    password: root
+    url: jdbc:mysql://192.168.32.252:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   rabbitmq:
-    host: 127.0.0.1
+    host: 192.168.32.252
     port: 5672
-    username: guest
-    password: guest
+    username: rabbitmq-user
+    password: rabbitmq-password
   redis:
-    host: 127.0.0.1
+    host: 192.168.32.252
     port: 6379
+    password: 1234
   jpa:
     show-sql: true
 girl: 18
