--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -1,8 +1,13 @@
-rabbitmq:
-    host: 192.168.32.252
-    port: 5672
-    username: rabbitmq-user
-    password: rabbitmq-password
+spring:
+    rabbitmq:
+        host: 192.168.32.252
+        port: 5672
+        username: rabbitmq-user
+        password: rabbitmq-password
+girl:
+  name: mo
+  age: 37
+  
 zuul:
   #全部服务忽略敏感头(全部服务都可以传递cookie)
   sensitive-headers: 
