--- a/product-dev.yml
+++ b/product-dev.yml
@@ -2,15 +2,15 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: root
-    url: jdbc:mysql://192.168.32.252:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+    password: JDWL_20160129@
+    url: jdbc:mysql://mysql:13306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   rabbitmq:
-    host: 192.168.32.252
+    host: rabbitmq
     port: 5672
-    username: rabbitmq-user
-    password: rabbitmq-password
+    username: ajutong-log
+    password: JDWL_20160129@
   redis:
-    host: 192.168.32.252
+    host: redis
     port: 6379
     password: 1234
   jpa:
