--- a/product-dev.yml
+++ b/product-dev.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: JDWL_20160129@
-    url: jdbc:mysql://mysql:13306/springCloud_sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://mysql:13306/springcloud_sell?characterEncoding=utf-8&useSSL=false
   rabbitmq:
     host: rabbitmq
     port: 5672
