--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -1,9 +1,9 @@
 spring:
     rabbitmq:
-        host: 192.168.32.252
+        host: rabbitmq
         port: 5672
-        username: rabbitmq-user
-        password: rabbitmq-password
+        username: ajutong-log
+        password: JDWL_20190129@
 girl:
   name: amot
   age: 37
