--- a/product-dev.yml
+++ b/product-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     password: JDWL_20160129@
-    url: jdbc:mysql://mysql:13306/springcloud_sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.10.150:13306/springcloud_sell?characterEncoding=utf-8&useSSL=false
   rabbitmq:
     host: rabbitmq
     port: 5672
