--- a/user-dev.yml
+++ b/user-dev.yml
@@ -3,14 +3,14 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://192.168.32.252:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.10.150:13306/springcloud_sell?characterEncoding=utf-8&useSSL=false
   rabbitmq:
-    host: 192.168.32.252
+    host: 192.168.10.150
     port: 5672
-    username: rabbitmq-user
-    password: rabbitmq-password
+    username: ajutong-log
+    password: JDWL_20160129@
   redis:
-    host: 192.168.32.252
+    host: redis
     port: 6379
     password: 1234
 girl:
