--- a/user-dev.yml
+++ b/user-dev.yml
@@ -9,7 +9,7 @@ spring:
     username: ajutong-log
     password: JDWL_20160129@
   redis:
-    host: redis
+    host: 192.168.10.150
     port: 6379
     password: 1234
 girl:
