--- a/product-dev.yml
+++ b/product-dev.yml
@@ -4,12 +4,12 @@ spring:
     password: JDWL_20160129@
     url: jdbc:mysql://192.168.10.150:13306/springcloud_sell?characterEncoding=utf-8&useSSL=false
   rabbitmq:
-    host: rabbitmq
+    host: 192.168.10.150
     port: 5672
     username: ajutong-log
     password: JDWL_20160129@
   redis:
-    host: redis
+    host: 192.168.10.150
     port: 6379
     password: 1234
   jpa:
