--- a/order-test.yml
+++ b/order-test.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     username: root
     password: JDWL_20160129@
-    url: jdbc:mysql://192.168.10.150:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.10.150:13306/springcloud_sell?characterEncoding=utf-8&useSSL=false
   rabbitmq:
     host: 192.168.10.150
     port: 5672
